// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works with failed rating prop 1`] = `
<Translation
  passThrough=""
/>
`;

exports[`works with failed rating prop 2`] = `
<Translation
  passThrough=""
/>
`;

exports[`works with rating prop 1`] = `
<Translation
  passThrough="★★★"
/>
`;

exports[`works with rating prop 2`] = `
<Translation
  passThrough="★★★★★★★★★★"
/>
`;
